<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/character_detail_imageview"
            android:layout_width="@dimen/small_image_size_width"
            android:layout_height="@dimen/small_image_size_height"
            android:layout_gravity="center"
            android:padding="@dimen/image_padding"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/character_detail_id_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_detail_id"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:id="@+id/character_detail_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_detail_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/character_detail_status_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_detail_status"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/character_detail_species_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_detail_species"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/character_detail_type_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_detail_type"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/character_detail_gender_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_detail_gender"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />
        <TextView
            android:id="@+id/character_detail_origin_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_detail_origin"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:id="@+id/character_detail_location_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_detail_location"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:id="@+id/character_detail_url_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_detail_url"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/character_detail_created_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_detail_created"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_episode_in_character_detail"
            android:padding="@dimen/small_padding"
            tools:listitem="@layout/episode_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        </ScrollView>

    </LinearLayout>

</LinearLayout>