<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_name"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/species_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_species"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/status_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_status"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"/>
        <TextView
            android:id="@+id/gender_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/character_gender"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
