<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/episode_name_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episode_name"
            android:padding="@dimen/small_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:id="@+id/episode_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episode"
            android:padding="@dimen/small_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:id="@+id/air_date_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/air_date"
            android:padding="@dimen/small_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>